@@ -27,6 +27,7 @@
 - transfered class::getInstance() to class _construct (mamba/goffy)
 - code documentation cleaning (goffy)
 - fixed bug with ENUM (mamba/goffy)
+- fixed bug with changing field/table properties via image (mamba/goffy)
 
 <h5>3.03 Alpha 3   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
